--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>GitHubCRCE Memory Matching Game</title>
+    <title>Memory Matching Game</title>
     <link rel="shortcut icon" type="image/jpg" href="Images/fevicon.PNG"/>
     <link rel="stylesheet" href="game.css">
     <script src="https://code.jquery.com/jquery-3.2.1.min.js"> </script>
@@ -16,7 +16,7 @@
     
     <section id="tableHolder">
         <div id="heading">
-            <span id="logo">GITHUBCRCE MEMORY MATCHING GAME</span>
+            <span id="logo">MEMORY MATCHING GAME</span>
             </div>
         <div id="title">
             <span id="moves"></span>
